src/app.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

@import '@skeletonlabs/skeleton';
@import '@skeletonlabs/skeleton-svelte';
@import '@skeletonlabs/skeleton/themes/cerberus';
@import '@skeletonlabs/skeleton/themes/catppuccin';
@import '@skeletonlabs/skeleton/themes/vox';
@import '@skeletonlabs/skeleton/themes/wintry';
@import '../theme_ceresa';

@theme {
    --breakpoint-sm: 800px;
}

*:focus {
    @apply ring-2 ring-secondary-200;
    outline: none; /* Overwrite default focus-marker */}
body {
    @apply bg-surface-50;
}

h1, h2, h3, h4, h5, h6, p {
    @apply text-surface-950;
}

h1 {
    @apply mb-10 mt-15 text-primary-500;
}
h2 {
    @apply mb-5;
}

p {
    @apply mb-5 bg-none text-surface-950;
}

